style.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: 'Open Sans', sans-serif;
  background: linear-gradient(45deg, #70a0a4, #8a2be2);
  background-repeat: no-repeat;
  background-size: cover;
  height: 100vh;
}

h2 {
  margin: 0;
  margin-right: 30px;
  align-self: center;
  opacity: 0.7;
}

p {
  margin: 0;
  line-height: 1.5em;
  opacity: 0.7;
}

.footer {
  text-align: center;
  color: #d3ddd3;
  margin: -40px;
  font-size: 0.8rem;
}

.footer a {
  color: #9fd6db;
}

.footer a:hover,
.footer a:focus {
  color: blue;
}

.container {
  margin: 50px auto;
  max-width: 600px;
  border: 2px solid;
  border-radius: 30px;
  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.2);
  background: #d3ddd3;
  padding: 20px 30px;
}

.weather-info {
  display: flex;
}

.col-1 {
  width: 70%;
}

.col-2 {
  width: 30%;
  align-self: center;
}

.current-weather {
  display: flex;
}

input,
.search-btn {
  font-size: 1rem;
  border-radius: 4px;
  border: 1px solid gray;
}

input {
  width: 80%;
  padding: 0.5em;
}

.search-btn {
  padding: 0.5em 1em;
  cursor: pointer;
  background: #8a2be2;
  color: #fff;
  transform: scale(1);
  transition: all 200ms ease-in-out;
  margin-top: 3px;
}

.search-btn:hover,
.search-btn:focus {
  background: #fff;
  color: #8a2be2;
  transform: scale(1.06);
}

.temperature {
  font-size: 3rem;
  opacity: 0.7;
}

h1 {
  color: #8a2be2;
}

h2 {
  display: flex;
}

.degree-unit {
  margin: 7px 0 0 7px;
}

#weather-description {
  text-transform: capitalize;
}

